✨ (app.config.ts, app.html, app.ts, lang-switcher.ts, locale.service.ts, home-page.ts, en.json, ru.json): добавлены улучшения локализации и SEO ♻️ (app.config.ts, locale.service.ts, home-page.ts): рефакторинг кода для улучшения читаемости и производительности Изменения включают добавление поддержки функции `withFetch` в `provideHttpClient`, улучшение обработки языков в `LocaleService`, а также обновление SEO метаданных на главной странице. Это сделано для повышения гибкости локализации и улучшения SEO, что в свою очередь может привести к увеличению видимости приложения в поисковых системах.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,14 @@
 {
   "home": {
     "heroTitle": "Find out whether you'll be a millionaire by 40 <span class=\"text-green-400\">or in endless debt</span>"
+  },
+
+  "seo": {
+    "home": {
+      "title": "testx",
+      "description": "Интерактивный симулятор финансовой грамотности. Узнай, сколько капитала ты накопишь за 20 лет.",
+      "ogTitle": "Симулятор инвестора",
+      "ogDescription": "Запусти симуляцию жизни на 20 лет и узнай свой капитал."
+    }
   }
 }
