--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,5 +1,13 @@
 {
   "home": {
     "heroTitle": "Узнай, будешь ли ты миллионером к 40 <span class=\"text-green-400\">или в вечных долгах</span>"
+  },
+  "seo": {
+    "home": {
+      "title": "Симулятор инвестора — узнай, выйдешь ли на капитал к 40",
+      "description": "Интерактивный симулятор финансовой грамотности. Узнай, сколько капитала ты накопишь за 20 лет.",
+      "ogTitle": "Симулятор инвестора",
+      "ogDescription": "Запусти симуляцию жизни на 20 лет и узнай свой капитал."
+    }
   }
 }
