--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,6 +1,8 @@
 {
   "home": {
-    "heroTitle": "Узнай, будешь ли ты миллионером к 40 <span class=\"text-green-400\">или в вечных долгах</span>"
+    "heroTitle": "Узнай, будешь ли ты миллионером к 40 <span class=\"text-green-400\">или в вечных долгах</span>",
+    "heroDesc": "Интерактивный симулятор финансовой жизни. Запусти свою жизнь на 20 лет и узнай, куда приведут твои решения.",
+    "getStarted": "Начать бесплатно"
   },
   "seo": {
     "home": {
