✨ (components.json, package.json, app.config.ts, app.routes.ts, lang-switcher.ts, home-page.html, home-page.ts, i18n files, styles.css, tsconfig.json): добавление поддержки интернационализации и улучшение структуры проекта 💡 (locale.service.ts, lang.guard.ts, universal-translate.loader.ts, utils.ts, button.ts): создание новых сервисов и компонентов для управления языком и локализацией
Добавлены файлы и изменения, которые обеспечивают поддержку интернационализации в приложении. Это включает в себя создание новых сервисов для управления языком, обновление маршрутов и компонентов для использования новых путей, а также добавление JSON-файлов для перевода. Изменения в стилях и конфигурации проекта также помогают улучшить структуру и поддержку новых библиотек.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,7 +2,49 @@
   "home": {
     "heroTitle": "Find out whether you'll be a millionaire by 40 <span class=\"text-green-400\">or in endless debt</span>",
     "heroDesc": "An interactive financial life simulator. Rewind your life for 20 years and discover where your decisions will lead.",
-    "getStarted": "Get started for free"
+    "getStarted": "Get started for free",
+
+    "howItWorks": {
+      "title": "How it works",
+
+      "blocks": [
+        {
+          "title": "Enter your salary and expenses",
+          "desc": "Configure real-life financial parameters"
+        },
+        {
+          "title": "Run a 20-year simulation",
+          "desc": "See how your capital grows"
+        },
+        {
+          "title": "Get a personalized plan",
+          "desc": "Learn how to reach financial freedom"
+        }
+      ]
+    },
+
+    "helpedOthers": {
+      "title": "Already helped others",
+      "blocks": [
+        {
+          "title": "Igor, 28 years old",
+          "desc": "I understood why to invest - +3.2 million capital in 15 years"
+        },
+        {
+          "title": "Anna, 25 years old",
+          "desc": "Started saving 20% and achieved passive income"
+        },
+        {
+          "title": "Maxim, 31 years old",
+          "desc": "Refused a car loan and accelerated capital growth"
+        }
+      ]
+    },
+
+    "CTA": {
+      "title": "Run your simulation now",
+      "btnTitle": "Start for free"
+    }
   },
 
   "seo": {
