--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -2,7 +2,48 @@
   "home": {
     "heroTitle": "Узнай, будешь ли ты миллионером к 40 <span class=\"text-green-400\">или в вечных долгах</span>",
     "heroDesc": "Интерактивный симулятор финансовой жизни. Запусти свою жизнь на 20 лет и узнай, куда приведут твои решения.",
-    "getStarted": "Начать бесплатно"
+    "getStarted": "Начать бесплатно",
+
+    "howItWorks": {
+      "title": "Как это работает",
+      "blocks": [
+        {
+          "title": "Введи свою зарплату и траты",
+          "desc": "Настрой реальные параметры своей жизни"
+        },
+        {
+          "title": "Запусти симуляцию на 20 лет",
+          "desc": "Посмотри, как растёт твой капитал"
+        },
+        {
+          "title": "Получи персональный план",
+          "desc": "Узнай, как выйти на финансовую свободу"
+        }
+      ]
+    },
+
+    "helpedOthers": {
+      "title": "Уже помогло другим",
+      "blocks": [
+        {
+          "title": "Игорь, 28 лет",
+          "desc": "Понял, зачем инвестировать — +3.2 млн капитала за 15 лет"
+        },
+        {
+          "title": "Анна, 25 лет",
+          "desc": "Начала откладывать 20% и вышла на пассивный доход"
+        },
+        {
+          "title": "Максим, 31 год",
+          "desc": "Отказался от кредита на авто и ускорил рост капитала"
+        }
+      ]
+    },
+
+    "CTA": {
+      "title": "Запусти свою симуляцию прямо сейчас",
+      "btnTitle": "Начать бесплатно"
+    }
   },
   "seo": {
     "home": {
