✨ (app.routes.ts, simulator-page.html, simulator-page.ts, en.json, ru.json): добавлена интернационализация для страницы симулятора 💡 (simulator-page.html): обновлены элементы интерфейса для использования переводов Добавлена поддержка интернационализации для страницы симулятора, что позволяет пользователям видеть текст на разных языках. Элементы интерфейса теперь используют переводимые строки, что улучшает доступность приложения для пользователей, говорящих на разных языках.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -47,6 +47,21 @@
     }
   },
 
+  "simulator": {
+    "hero": {
+      "title": "Financial Literacy Simulator",
+      "desc": "Set your life back 20 years and see how your finances can change through saving and investing.",
+      "btnText": "Go to"
+    },
+
+    "sectionsGenerate": {
+      "zp": "Salary",
+      "height": "Salary growth (%/year)",
+      "spending": "Spending (% of salary)",
+      "years": "Years"
+    }
+  },
+
   "seo": {
     "home": {
       "title": "Investor Simulator - Find out if you'll have capital by 40",
