--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -45,6 +45,20 @@
       "btnTitle": "Начать бесплатно"
     }
   },
+  "simulator": {
+    "hero": {
+      "title": "Симулятор финансовой грамотности",
+      "desc": "Запусти свою жизнь на 20 лет и узнай, как твои финансы могут измениться через накопления и инвестиции.",
+      "btnText": "Перейти"
+    },
+
+    "sectionsGenerate": {
+      "zp": "ЗП",
+      "height": "Рост ЗП (%/год)",
+      "spending": "Траты (% от ЗП)",
+      "years": "Года"
+    }
+  },
   "seo": {
     "home": {
       "title": "Симулятор инвестора — узнай, выйдешь ли на капитал к 40",
