✨ (simulator-page): добавлена поддержка инфляции в симуляторе 📝 (simulator-page): обновлены описания опций для проживания и инвестирования Изменения включают добавление поля для ввода инфляции, что позволяет пользователям учитывать её влияние на капитал. Обновлены описания опций, чтобы лучше объяснить их функциональность. Это улучшает пользовательский опыт и делает симулятор более информативным и полезным.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -58,7 +58,8 @@
       "zp": "Salary",
       "height": "Salary growth (%/year)",
       "spending": "Spending (% of salary)",
-      "years": "Years"
+      "years": "Years",
+      "inflation": "Inflation (%/year)"
     }
   },
 
