--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -56,7 +56,8 @@
       "zp": "ЗП",
       "height": "Рост ЗП (%/год)",
       "spending": "Траты (% от ЗП)",
-      "years": "Года"
+      "years": "Года",
+      "inflation": "Инфляция (%/год)"
     }
   },
   "seo": {
