✨ (simulator): добавлен новый компонент для расчета симуляции ♻️ (app.config.ts, lang-switcher.ts): обновлены пути импорта для локализации 📝 (locale.service.ts): добавлен сервис для управления языком приложения 💡 (universal-translate.loader.ts): добавлен загрузчик для переводов 📝 (i18n): обновлены файлы локализации с новыми переводами
Создан новый компонент `SimulatorCalculation`, который инкапсулирует логику симуляции и отображение результатов. Это улучшает структуру кода и делает его более модульным. Обновлены пути импорта для локализации, чтобы обеспечить правильную работу с новыми файлами. Добавлен сервис `LocaleService` для управления языком приложения, что упрощает переключение языков. Также добавлен загрузчик для переводов, который загружает файлы локализации. Обновлены файлы локализации с новыми переводами для вкладок "Прожить" и "Инвестировать".

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -60,6 +60,17 @@
       "spending": "Spending (% of salary)",
       "years": "Years",
       "inflation": "Inflation (%/year)"
+    },
+
+    "tabs": {
+      "live": {
+        "title": "Live",
+        "desc": "An option for those who want to live the scenario of their life with different parameters (salary growth, expenses, years) and see what will happen to their capital."
+      },
+      "invest": {
+        "title": "Invest",
+        "desc": "An option for those who want to understand how different investment parameters (profitability, reinvestment) affect the final capital, all other things being equal."
+      }
     }
   },
 
