--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -58,6 +58,17 @@
       "spending": "Траты (% от ЗП)",
       "years": "Года",
       "inflation": "Инфляция (%/год)"
+    },
+
+    "tabs": {
+      "live": {
+        "title": "Прожить",
+        "desc": "Опция для тех, кто хочет прожить сценарий своей жизни с разными параметрами (рост зп, траты, годы) и посмотреть, что будет с капиталом."
+      },
+      "invest": {
+        "title": "Инвестировать",
+        "desc": "Опция для тех, кто хочет понять, как разные параметры инвестирования (доходность, реинвестирование) влияют на итоговый капитал при прочих равных условиях."
+      }
     }
   },
   "seo": {
