✨ (simulator-calculation): добавлены настройки для доходности инвестиций и реинвестирования 📝 (i18n): обновлены переводы для новых параметров инвестирования Добавлены новые элементы управления для настройки доходности инвестиций и выбора режима реинвестирования. Это позволяет пользователям более точно настраивать параметры симуляции и видеть, как различные стратегии влияют на итоговый капитал. Обновлены переводы для новых текстов, чтобы обеспечить локализацию для русскоязычных пользователей.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -71,6 +71,14 @@
         "title": "Invest",
         "desc": "An option for those who want to understand how different investment parameters (profitability, reinvestment) affect the final capital, all other things being equal."
       }
+    },
+
+    "invest": {
+      "return": "Return on investment (%/year)",
+      "reinvest": "Reinvestment",
+
+      "reinvest_yes": "Yes",
+      "reinvest_no": "No"
     }
   },
 
