--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -69,6 +69,14 @@
         "title": "Инвестировать",
         "desc": "Опция для тех, кто хочет понять, как разные параметры инвестирования (доходность, реинвестирование) влияют на итоговый капитал при прочих равных условиях."
       }
+    },
+
+    "invest": {
+      "return": "Доходность инвестиций (%/год)",
+      "reinvest": "Реинвестирование",
+
+      "reinvest_yes": "Да",
+      "reinvest_no": "Нет"
     }
   },
   "seo": {
