✨ (header): добавление нового компонента заголовка с навигацией 📝 (i18n): обновление файлов перевода для поддержки заголовка Создан новый компонент заголовка, который включает навигацию и переключатели языка и темы. Это улучшает пользовательский интерфейс, обеспечивая более удобный доступ к основным разделам приложения. Также обновлены файлы перевода для поддержки новых элементов интерфейса, что позволяет пользователям видеть заголовок на их языке.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -82,6 +82,14 @@
     }
   },
 
+  "header": {
+    "login": "Authorization",
+    "navbar": {
+      "home": "Home",
+      "simulator": "Simulator"
+    }
+  },
+
   "seo": {
     "home": {
       "title": "Investor Simulator - Find out if you'll have capital by 40",
