--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -79,6 +79,13 @@
       "reinvest_no": "Нет"
     }
   },
+  "header": {
+    "login": "Авторизация",
+    "navbar": {
+      "home": "Главная",
+      "simulator": "Симулятор"
+    }
+  },
   "seo": {
     "home": {
       "title": "Симулятор инвестора — узнай, выйдешь ли на капитал к 40",
