✨ (login): добавлены страницы входа и регистрации с формами 📝 (i18n): добавлены переводы для авторизации ♻️ (header): обновлен компонент заголовка для использования нового компонента ссылки Изменения включают добавление страниц для входа и регистрации, а также соответствующих форм. Это улучшает пользовательский опыт, позволяя пользователям легко входить в систему или создавать учетные записи. Переводы для новых текстов авторизации добавлены для поддержки многоязычности. Компонент заголовка обновлен для использования нового компонента ссылки, что улучшает структуру кода.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -90,6 +90,28 @@
     }
   },
 
+  "authorization": {
+    "continueWithTelegram": "Continue with Telegram",
+    "or": "or continue with",
+    "signIn": "Sign in",
+    "signUp": "Sign up",
+    "name": "Name",
+    "email": "Email",
+    "password": "Password",
+    "confirmPassword": "Confirm password",
+
+    "login": {
+      "title": "Welcome",
+      "desc": "Enter your account credentials to log in",
+      "noAccount": "Don't have an account?"
+    },
+    "register": {
+      "title": "Create an account",
+      "desc": "Fill in the fields below to register",
+      "alreadyHaveAccount": "Already have an account?"
+    }
+  },
+
   "seo": {
     "home": {
       "title": "Investor Simulator - Find out if you'll have capital by 40",
