--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -86,12 +86,49 @@
       "simulator": "Симулятор"
     }
   },
+
+  "authorization": {
+    "continueWithTelegram": "Продолжить в Телеграмме",
+    "or": "или продолжить с",
+    "signIn": "Войти",
+    "signUp": "Зарегистрироваться",
+    "name": "Имя",
+    "email": "Электронная почта",
+    "password": "Пароль",
+    "confirmPassword": "Подтвердите пароль",
+
+    "login": {
+      "title": "Добро пожаловать",
+      "desc": "Введите свои учетные данные для входа",
+      "noAccount": "У вас нет учетной записи?"
+    },
+    "register": {
+      "title": "Создать аккаунт",
+      "desc": "Заполните поля ниже, чтобы зарегистрироваться",
+      "alreadyHaveAccount": "Уже есть учетная запись?"
+    }
+  },
+
   "seo": {
     "home": {
       "title": "Симулятор инвестора — узнай, выйдешь ли на капитал к 40",
       "description": "Интерактивный симулятор финансовой грамотности. Узнай, сколько капитала ты накопишь за 20 лет.",
       "ogTitle": "Симулятор инвестора",
       "ogDescription": "Запусти симуляцию жизни на 20 лет и узнай свой капитал."
+    },
+
+    "simulator": {
+      "title": "Симулятор финансовой грамотности",
+      "description": "Запусти свою жизнь на 20 лет и узнай, как твои финансы могут измениться через накопления и инвестиции.",
+      "ogTitle": "Симулятор финансовой грамотности",
+      "ogDescription": "Запусти свою жизнь на 20 лет и узнай, как твои финансы могут измениться через накопления и инвестиции."
+    },
+
+    "authorization": {
+      "title": "Авторизация",
+      "description": "Войдите в свой аккаунт или зарегистрируйтесь, чтобы начать использовать симулятор финансовой грамотности.",
+      "ogTitle": "Авторизация",
+      "ogDescription": "Войдите в свой аккаунт или зарегистрируйтесь, чтобы начать использовать симулятор финансовой грамотности."
     }
   }
 }
