✨ (app.routes.ts, header.ts, calculation.ts, login-page.ts, register-page.ts, simulator-page.ts, navbar.const.ts, i18n): добавлены новые маршруты и страницы, улучшена SEO Добавлены новые страницы и маршруты, включая страницу калькуляции. Обновлены компоненты для поддержки SEO, что улучшает видимость приложения в поисковых системах. Также добавлены переводы для новых элементов интерфейса, что улучшает локализацию приложения.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -86,7 +86,8 @@
     "login": "Authorization",
     "navbar": {
       "home": "Home",
-      "simulator": "Simulator"
+      "simulator": "Simulator",
+      "calculate": "Budget calculator"
     }
   },
 
@@ -98,6 +99,7 @@
     "name": "Name",
     "email": "Email",
     "password": "Password",
+    "forgot": "Forgot password",
     "confirmPassword": "Confirm password",
 
     "login": {
@@ -118,6 +120,20 @@
       "description": "An interactive financial literacy simulator. Find out how much capital you can accumulate in 20 years. Find out if you'll have enough money by 40.",
       "ogTitle": "Investor simulator",
       "ogDescription": "Run a 20-year life simulation and find out your net worth."
+    },
+
+    "simulator": {
+      "title": "Financial Literacy Simulator",
+      "description": "Set your life back 20 years and see how your finances can change through saving and investing.",
+      "ogTitle": "Financial Literacy Simulator",
+      "ogDescription": "Set your life back 20 years and discover how your finances can change through savings and investments.."
+    },
+
+    "authorization": {
+      "title": "Authorization",
+      "description": "Login to your account or register to start using the financial literacy simulator.",
+      "ogTitle": "Authorization",
+      "ogDescription": "Login to your account or register to start using the financial literacy simulator."
     }
   }
 }
