--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -83,7 +83,8 @@
     "login": "Авторизация",
     "navbar": {
       "home": "Главная",
-      "simulator": "Симулятор"
+      "simulator": "Симулятор",
+      "calculate": "Калькулятор бюджета"
     }
   },
 
@@ -96,6 +97,7 @@
     "email": "Электронная почта",
     "password": "Пароль",
     "confirmPassword": "Подтвердите пароль",
+    "forgot": "Забыли пароль?",
 
     "login": {
       "title": "Добро пожаловать",
